--- a/views/index.html
+++ b/views/index.html
@@ -12,11 +12,14 @@
             <!--The table of links to navigate to the other pages-->
             <tr>
                 <td><a href="http://localhost:8080/">Home</a></td>
-                <td><a href="http://localhost:8080/newtask">Add-Task</a></td>
-                <td><a href="http://localhost:8080/listtask">List-All-Tasks</a></td>
-                <td><a href="http://localhost:8080/update">Update</a></td>
-                <td><a href="http://localhost:8080/deleteTask">Delete-One</a></td>
-                <td><a href="http://localhost:8080/deleteAll">Delete-All-Tasks</a></td>
+                <td><a href="/newtask">Add-Task</a></td>
+                <td><a href="/listtask">List-All-Tasks</a></td>
+                <td><a href="/update">Update</a></td>
+                <td><a href="/deleteTask">Delete-One</a></td>
+                <td><a href="/deleteAll">Delete-All-Tasks</a></td>
+                <td><a href="/newDeveloper">Add-Developer</a></td>
+                <td><a href="/listDeveloper">List-Developers</a></td>
+
             </tr>
         </table>
     </body>
